// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactsEditView should match a snapshot with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-grid"
      >
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#applicantInfographic_svg__a)"
                >
                  <circle
                    cx="10"
                    cy="10"
                    fill="#23A4DE"
                    r="10"
                  />
                  <path
                    d="M15.43 15.606v1.385a.282.282 0 0 1-.282.282H4.852a.282.282 0 0 1-.282-.282v-1.385a2.63 2.63 0 0 1 2.63-2.63 1.46 1.46 0 0 0 1.226-.664c.261-.402.234-.752.234-1.034l.005-.013A3.491 3.491 0 0 1 6.51 8.04v-.11a.87.87 0 0 1-.881-.866V5.597c-.012-.51.012-2.31 1.311-3.562C8.451.578 10.846.697 12.581 1.477a.07.07 0 0 1-.003.13l-.452.186c-.068.027-.054.127.02.135l.219.024A3.56 3.56 0 0 1 15 3.586a.076.076 0 0 1-.01.087c-.373.395-.582.92-.582 1.466v1.924a.866.866 0 0 1-.865.865h-.052v.11c0 1.456-.89 2.703-2.156 3.227l.005.013c0 .274-.03.628.235 1.034.26.4.712.664 1.225.665a2.63 2.63 0 0 1 2.63 2.63Z"
                    fill="#EAF5FC"
                  />
                  <path
                    d="M15 3.586a.075.075 0 0 1-.01.087c-.373.396-.582.92-.582 1.466v1.924c0 .437-.33.865-.917.865V5.75c0-.935-.758-1.692-1.693-1.692H8.202c-.935 0-1.693.757-1.693 1.692v2.178a.87.87 0 0 1-.882-.865V5.597c-.01-.51.012-2.31 1.312-3.562C8.45.578 10.846.697 12.58 1.477a.07.07 0 0 1-.002.13l-.452.186c-.068.028-.054.127.019.135l.22.024a3.558 3.558 0 0 1 2.634 1.634ZM4.57 18.399v-2.793a2.63 2.63 0 0 1 2.63-2.63 1.46 1.46 0 0 0 1.226-.664 2.42 2.42 0 0 0 3.149 0c.26.4.712.665 1.225.665a2.63 2.63 0 0 1 2.63 2.63v2.791A9.953 9.953 0 0 1 10 20a9.954 9.954 0 0 1-5.43-1.601Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M13.49 8.039a3.491 3.491 0 0 1-3.49 3.49c-1.816 0-3.491-1.411-3.491-3.6V5.75c0-.935.758-1.692 1.693-1.692h3.596c.935 0 1.693.757 1.693 1.692V8.04Z"
                    fill="#fff"
                  />
                  <path
                    d="M8.62 13.829c-.13.04-.27.063-.42.065-1.456.012-2.643 1.164-2.643 2.62v.265a.494.494 0 0 1-.494.494h-.211a.282.282 0 0 1-.282-.282v-1.385a2.63 2.63 0 0 1 2.63-2.63 1.46 1.46 0 0 0 1.226-.664c.104.09.217.17.335.24.52.31.437 1.095-.14 1.277ZM12.578 1.606c-.415.171-.474.209-.617.186-2.316-.359-4.348.6-5.038 2.85a1.685 1.685 0 0 0-.414 1.108v1.323c0 .571-.882.61-.882-.01V5.597c-.01-.51.012-2.31 1.312-3.562C8.45.578 10.845.697 12.58 1.477a.07.07 0 0 1-.002.13Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M10 16a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2h-2a1 1 0 0 1-1-1Z"
                    fill="#fff"
                  />
                </g>
                <defs>
                  <clippath
                    id="applicantInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                      transform="matrix(-1 0 0 1 20 0)"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Contact Name
              </h2>
              <p
                class="el-has-grey-text el-body-text"
              >
                Mr Foo Bar
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 40 40"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M38 11.47V5.177A3.174 3.174 0 0 0 34.836 2H5.164A3.174 3.174 0 0 0 2 5.176v6.295h36Z"
                  fill="#23A4DE"
                />
                <path
                  d="M2 11.4v23.235a3.174 3.174 0 0 0 3.164 3.177h29.672A3.174 3.174 0 0 0 38 34.635V11.4H2Z"
                  fill="#7BC9EB"
                />
                <circle
                  cx="15.5"
                  cy="29"
                  fill="#EAF5FC"
                  r="3"
                />
                <path
                  d="M17.986 16.248a13.174 13.174 0 0 0-6.01.215.66.66 0 0 0-.476.638v1.384a.64.64 0 0 0 .848.598 10.445 10.445 0 0 1 13.07 13.069.64.64 0 0 0 .597.848h1.384a.658.658 0 0 0 .637-.476c.535-1.96.608-4.017.215-6.01a13.074 13.074 0 0 0-10.265-10.265Z"
                  fill="#0061A8"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.423 33a3.922 3.922 0 1 1 0-7.845 3.922 3.922 0 0 1 0 7.845Zm0-5.23a1.308 1.308 0 1 0 0 2.615 1.308 1.308 0 0 0 0-2.616Z"
                  fill="#0061A8"
                  fill-rule="evenodd"
                />
                <path
                  d="M11.873 21.36A8.488 8.488 0 0 1 23.14 32.626a.66.66 0 0 1-.6.374h-1.48a.654.654 0 0 1-.547-1.004 5.857 5.857 0 0 0-8.008-8.008.655.655 0 0 1-1.004-.547v-1.48a.661.661 0 0 1 .373-.6Z"
                  fill="#0061A8"
                />
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Active Status
              </h2>
              <div>
                <span
                  class="el-intent-success el-status-indicator"
                />
                 
                Active
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#phoneInfographic_svg__a)"
                >
                  <path
                    d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a391.66 391.66 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.536.536 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a.486.486 0 0 1 .056-.066c.145-.14.288-.28.43-.423.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115-.375-.38-.753-.757-1.13-1.135-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.216 19.216 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M10.025 3.774a1.265 1.265 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056Z"
                    fill="#7BC9EB"
                  />
                </g>
                <defs>
                  <clippath
                    id="phoneInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                      transform="matrix(-1 0 0 1 20 0)"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Mobile Phone
              </h2>
              <p
                class="el-has-grey-text el-body-text"
              >
                242423424
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#phoneInfographic_svg__a)"
                >
                  <path
                    d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a391.66 391.66 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.536.536 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a.486.486 0 0 1 .056-.066c.145-.14.288-.28.43-.423.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115-.375-.38-.753-.757-1.13-1.135-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.216 19.216 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M10.025 3.774a1.265 1.265 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056Z"
                    fill="#7BC9EB"
                  />
                </g>
                <defs>
                  <clippath
                    id="phoneInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                      transform="matrix(-1 0 0 1 20 0)"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Home Phone
              </h2>
              <p
                class="el-has-grey-text el-body-text"
              >
                234234234
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#phoneInfographic_svg__a)"
                >
                  <path
                    d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a391.66 391.66 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.536.536 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a.486.486 0 0 1 .056-.066c.145-.14.288-.28.43-.423.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115-.375-.38-.753-.757-1.13-1.135-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.216 19.216 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M10.025 3.774a1.265 1.265 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056Z"
                    fill="#7BC9EB"
                  />
                </g>
                <defs>
                  <clippath
                    id="phoneInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                      transform="matrix(-1 0 0 1 20 0)"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Work Phone
              </h2>
              <p
                class="el-has-grey-text el-body-text"
              >
                2342342344
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.466 11.791a.794.794 0 0 0 .533.209.795.795 0 0 0 .534-.209L20 4c0-.5-.636-1-.969-1H.97C.636 3 0 3.5 0 4l9.466 7.791Z"
                  fill="#23A4DE"
                />
                <path
                  d="M11.394 10.792a2.057 2.057 0 0 1-1.393.552 2.057 2.057 0 0 1-1.393-.552L1 3c-.5 0-1 .5-1 1v10.871c0 .607.226 1.188.628 1.616.402.429.946.67 1.515.67h15.714c.569 0 1.114-.241 1.515-.67.402-.428.628-1.01.628-1.615V4c0-.5-.5-1-1-1l-7.606 7.792Z"
                  fill="#7BC9EB"
                />
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Email
              </h2>
              <p
                class="el-has-grey-text el-body-text"
              >
                foo@bar.com
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#houseInfographic_svg__a)"
                >
                  <path
                    d="M2 20h16V7.882L10 2 2 7.882V20Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M1.221 10 10 2.657 18.779 10 20 8.365 10 0 0 8.365 1.221 10Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M6 12h8v8H6v-8Z"
                    fill="#EAF5FC"
                  />
                  <path
                    d="M8 14h4v6H8v-6Z"
                    fill="#23A4DE"
                  />
                </g>
                <defs>
                  <clippath
                    id="houseInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Primary Address
              </h2>
              <p
                class="el-has-grey-text el-body-text"
              >
                Bar Foo Foo Bar Foo Bar Foo
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#houseInfographic_svg__a)"
                >
                  <path
                    d="M2 20h16V7.882L10 2 2 7.882V20Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M1.221 10 10 2.657 18.779 10 20 8.365 10 0 0 8.365 1.221 10Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M6 12h8v8H6v-8Z"
                    fill="#EAF5FC"
                  />
                  <path
                    d="M8 14h4v6H8v-6Z"
                    fill="#23A4DE"
                  />
                </g>
                <defs>
                  <clippath
                    id="houseInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Secondary Address
              </h2>
              <p
                class="el-has-grey-text el-body-text"
              >
                Bar Foo Foo Bar Foo Bar Foo
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#houseInfographic_svg__a)"
                >
                  <path
                    d="M2 20h16V7.882L10 2 2 7.882V20Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M1.221 10 10 2.657 18.779 10 20 8.365 10 0 0 8.365 1.221 10Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M6 12h8v8H6v-8Z"
                    fill="#EAF5FC"
                  />
                  <path
                    d="M8 14h4v6H8v-6Z"
                    fill="#23A4DE"
                  />
                </g>
                <defs>
                  <clippath
                    id="houseInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Work Address
              </h2>
              <p
                class="el-has-grey-text el-body-text"
              >
                Bar Foo Foo Bar Foo Bar Foo
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#vendorInfographic_svg__a)"
                >
                  <path
                    d="M2.552 16.672A9.962 9.962 0 0 1 0 10C0 4.477 4.477 0 10 0s10 4.477 10 10a9.962 9.962 0 0 1-2.552 6.672H2.552Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M5.893 3.897c.279-1.085 1.322-1.202 1.322-1.202S7.441.768 10 .768s2.785 1.927 2.785 1.927 1.043.117 1.322 1.202c.279 1.085-.442 2.628-.442 2.628L10 8.018 6.335 6.525s-.72-1.543-.442-2.628Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M14.107 3.897c.279 1.085-.442 2.628-.442 2.628l-1.768.72-.45-.546V4.304c1.097-.228 1.338-.984 1.338-1.609 0 0 1.043.118 1.322 1.202Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M7.302 7.175s-.348-.847-.967-.65c-.62.196.015 2.03 1.224 2.145l-.257-1.495ZM12.698 7.175s.348-.847.967-.65c.62.196-.015 2.03-1.224 2.145l.257-1.495Z"
                    fill="#fff"
                  />
                  <path
                    d="M2.552 16.672c.38-1.108.805-2.141 1.159-2.453.86-.759 4.582-1.372 4.582-1.372L10 14.167l1.707-1.32s3.723.613 4.582 1.372c.353.312.78 1.345 1.159 2.453A9.974 9.974 0 0 1 10 20a9.974 9.974 0 0 1-7.448-3.328Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M5.913 18.633a9.996 9.996 0 0 0 8.735-5.128c.707.207 1.345.452 1.641.714.354.312.78 1.345 1.159 2.453A9.974 9.974 0 0 1 10 20c-1.881 0-3.64-.52-5.144-1.423.348.036.7.056 1.057.056Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="m9.42 15.948.58-.88.58.88.504 3.994a10.107 10.107 0 0 1-2.168 0l.504-3.994Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M9.39 16.083h1.22c.09 0 .167-.06.19-.146l.49-1.885H8.71l.49 1.885c.023.086.1.146.19.146Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="m10.018 15.937.49-1.885h.781l-.49 1.885a.195.195 0 0 1-.188.146h-.782c.09 0 .167-.06.19-.146Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M11.707 8.47v4.377c0 .665-.764 1.205-1.707 1.205-.943 0-1.707-.54-1.707-1.205V8.469h3.414Z"
                    fill="#EAF5FC"
                  />
                  <path
                    d="M11.707 12.305 10 14.052s.664 1.2 1.094 1.2c.43 0 1.172-2.304 1.172-2.304l-.56-.643ZM8.293 12.305 10 14.052s-.664 1.2-1.094 1.2c-.43 0-1.172-2.304-1.172-2.304l.56-.643Z"
                    fill="#fff"
                  />
                  <path
                    d="m4.407 17.04.45 1.537a10.014 10.014 0 0 1-.833-.558v-.923c0-.226.32-.272.383-.055ZM15.976 17.096v.923c-.268.2-.546.386-.833.558l.45-1.536c.063-.217.383-.171.383.055Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M7.215 6.107c.171-.417.183-1.693.637-1.875.453-.182.833.312 2.148.312 1.315 0 1.695-.494 2.149-.312.453.182.465 1.458.636 1.875.16.388.36.467.386.476.002.06.003.122.003.183 0 2.338-1.421 5.079-3.174 5.079S6.826 9.104 6.826 6.766l.003-.183c.027-.009.227-.088.386-.476Z"
                    fill="#fff"
                  />
                </g>
                <defs>
                  <clippath
                    id="vendorInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                      transform="matrix(1 0 0 -1 0 20)"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Negotiators
              </h2>
              <mock-styled.div />
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#flatInfographic_svg__a)"
                >
                  <path
                    d="M20 20h-9V4h9v16Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M13 2h-1v18h1V2ZM1.28 0v1.787H0V20h12V0H1.28Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M5.149 4.505H3.617V6.38H5.15V4.505ZM8.962 4.505H7.43V6.38h1.532V4.505ZM3.617 8.255H5.15v1.875H3.617V8.255ZM8.962 8.255H7.43v1.875h1.532V8.255ZM3.617 12.006H5.15v1.875H3.617v-1.875ZM8.962 12.006H7.43v1.875h1.532v-1.875ZM3.617 15.756H5.15v1.875H3.617v-1.875ZM8.962 15.756H7.43v1.875h1.532v-1.875Z"
                    fill="#EAF5FC"
                  />
                  <path
                    d="M16.281 8.255h-1.532v1.875h1.532V8.255ZM16.281 12.006h-1.532v1.875h1.532v-1.875Z"
                    fill="#23A4DE"
                  />
                </g>
                <defs>
                  <clippath
                    id="flatInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Offices
              </h2>
              <mock-styled.div>
                London Estate Agent
              </mock-styled.div>
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#webInfographic_svg__a)"
                >
                  <path
                    d="M10.809 7.535v11.3l3.166-2.907L16.273 20l1.67-.796-2.213-3.917h4.272l-9.193-7.753Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M7.341 16.127a20.1 20.1 0 0 1-.934-4.185c.795.045 1.614.072 2.445.072h.035V10.6h-.035c-.921 0-1.787-.03-2.596-.079a31.37 31.37 0 0 1-.093-2.386c0-.853.031-1.642.085-2.387a42.751 42.751 0 0 1 5.193 0c0 .256 1.36 1.085 1.595 1.282-.013-.39-.037-.77-.064-1.15a25.46 25.46 0 0 1 4.594.863c.089.458.135.923.137 1.388 0 .465-.044.928-.132 1.386-.067.353-.464.946-.644 1.153a22.858 22.858 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.189 1.653-.504 3.997-.172 1.277-.443 5.297-.443 5.895-.577 0-1.23-.16-2.083-.16ZM5.598.584a23.835 23.835 0 0 0-.748 3.868 30.2 30.2 0 0 0-4.208.685 8.149 8.149 0 0 1 1.965-2.742A8.992 8.992 0 0 1 5.588.584h.01Zm0 15.107a8.996 8.996 0 0 1-2.993-1.808 8.152 8.152 0 0 1-1.973-2.748 30.16 30.16 0 0 0 4.208.688 23.86 23.86 0 0 0 .746 3.866l.012.002Zm-.887-5.3a25.428 25.428 0 0 1-4.572-.864 7.031 7.031 0 0 1 0-2.78c1.489-.426 3.02-.715 4.572-.864-.05.73-.079 1.483-.079 2.246 0 .764.03 1.535.079 2.263ZM8.853 4.26c-.84 0-1.658.025-2.445.07.161-1.426.477-2.833.94-4.201a9.017 9.017 0 0 1 3.023 0c.46 1.37.77 2.777.926 4.203a40.993 40.993 0 0 0-2.444-.072Zm4.007.19a23.878 23.878 0 0 0-.746-3.868 8.993 8.993 0 0 1 2.989 1.81 8.148 8.148 0 0 1 1.97 2.746 30.19 30.19 0 0 0-4.213-.687Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M7.343 16.127a20.099 20.099 0 0 1-.934-4.185c.794.045 1.613.072 2.445.072h.034V10.6h-.034c-.922 0-1.788-.03-2.597-.079a31.37 31.37 0 0 1-.093-2.385c0-.854.032-1.643.086-2.388a42.76 42.76 0 0 1 5.193 0c0 .256 1.36 1.085 1.594 1.282-.012-.39-.037-.77-.064-1.15 1.56.147 3.098.436 4.595.863.088.458.134.923.136 1.388 0 .465-.044.928-.131 1.386-.068.353-.465.946-.645 1.153a22.858 22.858 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.188 1.653-.504 3.997-.171 1.277-.443 5.297-.443 5.895-.576 0-1.23-.16-2.082-.16Z"
                    fill="#23A4DE"
                  />
                </g>
                <defs>
                  <clippath
                    id="webInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                      transform="matrix(-1 0 0 1 20 0)"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Source
              </h2>
              <mock-styled.div />
            </div>
          </div>
        </div>
        <div
          class="el-fade-in el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#shieldInfographic_svg__a)"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                >
                  <path
                    d="M17.609 3.516C14.918 3.516 13.548 0 9.976 0 6.453 0 5.083 3.516 2.39 3.516c-.195 0-.391.204-.391.458 0 7.95 1.077 11.873 7.78 15.95.147.102.293.102.391 0 6.753-4.077 7.829-8 7.829-15.95 0-.254-.195-.458-.391-.458Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M17.849 3.907C16.5 8 10.649 14.191 5.399 16.5 6.5 18 9 19.5 9.822 19.926c.15.099.301.099.402 0 6.923-3.98 7.977-7.81 7.977-15.571 0-.249-.29-.636-.351-.448Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="m13.453 6.177-4.796 4.825-1.1-1.126c-1.415-1.367-3.459.723-2.123 2.17l2.202 2.171c.55.644 1.572.644 2.122 0l5.817-5.87c1.336-1.446-.786-3.617-2.122-2.17Z"
                    fill="#EAF5FC"
                  />
                </g>
                <defs>
                  <clippath
                    id="shieldInfographic_svg__a"
                  >
                    <path
                      d="M0 0h20v20H0z"
                      fill="#fff"
                      transform="matrix(-1 0 0 1 20 0)"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div>
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Marketing Preferences
              </h2>
              <mock-styled.div>
                Has Marketing Consent
              </mock-styled.div>
              <mock-styled.div>
                Prefers Letter Communications
              </mock-styled.div>
              <mock-styled.div>
                Prefers Email Communications
              </mock-styled.div>
              <mock-styled.div>
                Prefers Phone Communications
              </mock-styled.div>
              <mock-styled.div>
                Prefers SMS Communications
              </mock-styled.div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-grid"
    >
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#applicantInfographic_svg__a)"
              >
                <circle
                  cx="10"
                  cy="10"
                  fill="#23A4DE"
                  r="10"
                />
                <path
                  d="M15.43 15.606v1.385a.282.282 0 0 1-.282.282H4.852a.282.282 0 0 1-.282-.282v-1.385a2.63 2.63 0 0 1 2.63-2.63 1.46 1.46 0 0 0 1.226-.664c.261-.402.234-.752.234-1.034l.005-.013A3.491 3.491 0 0 1 6.51 8.04v-.11a.87.87 0 0 1-.881-.866V5.597c-.012-.51.012-2.31 1.311-3.562C8.451.578 10.846.697 12.581 1.477a.07.07 0 0 1-.003.13l-.452.186c-.068.027-.054.127.02.135l.219.024A3.56 3.56 0 0 1 15 3.586a.076.076 0 0 1-.01.087c-.373.395-.582.92-.582 1.466v1.924a.866.866 0 0 1-.865.865h-.052v.11c0 1.456-.89 2.703-2.156 3.227l.005.013c0 .274-.03.628.235 1.034.26.4.712.664 1.225.665a2.63 2.63 0 0 1 2.63 2.63Z"
                  fill="#EAF5FC"
                />
                <path
                  d="M15 3.586a.075.075 0 0 1-.01.087c-.373.396-.582.92-.582 1.466v1.924c0 .437-.33.865-.917.865V5.75c0-.935-.758-1.692-1.693-1.692H8.202c-.935 0-1.693.757-1.693 1.692v2.178a.87.87 0 0 1-.882-.865V5.597c-.01-.51.012-2.31 1.312-3.562C8.45.578 10.846.697 12.58 1.477a.07.07 0 0 1-.002.13l-.452.186c-.068.028-.054.127.019.135l.22.024a3.558 3.558 0 0 1 2.634 1.634ZM4.57 18.399v-2.793a2.63 2.63 0 0 1 2.63-2.63 1.46 1.46 0 0 0 1.226-.664 2.42 2.42 0 0 0 3.149 0c.26.4.712.665 1.225.665a2.63 2.63 0 0 1 2.63 2.63v2.791A9.953 9.953 0 0 1 10 20a9.954 9.954 0 0 1-5.43-1.601Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M13.49 8.039a3.491 3.491 0 0 1-3.49 3.49c-1.816 0-3.491-1.411-3.491-3.6V5.75c0-.935.758-1.692 1.693-1.692h3.596c.935 0 1.693.757 1.693 1.692V8.04Z"
                  fill="#fff"
                />
                <path
                  d="M8.62 13.829c-.13.04-.27.063-.42.065-1.456.012-2.643 1.164-2.643 2.62v.265a.494.494 0 0 1-.494.494h-.211a.282.282 0 0 1-.282-.282v-1.385a2.63 2.63 0 0 1 2.63-2.63 1.46 1.46 0 0 0 1.226-.664c.104.09.217.17.335.24.52.31.437 1.095-.14 1.277ZM12.578 1.606c-.415.171-.474.209-.617.186-2.316-.359-4.348.6-5.038 2.85a1.685 1.685 0 0 0-.414 1.108v1.323c0 .571-.882.61-.882-.01V5.597c-.01-.51.012-2.31 1.312-3.562C8.45.578 10.845.697 12.58 1.477a.07.07 0 0 1-.002.13Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M10 16a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2h-2a1 1 0 0 1-1-1Z"
                  fill="#fff"
                />
              </g>
              <defs>
                <clippath
                  id="applicantInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                    transform="matrix(-1 0 0 1 20 0)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Contact Name
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              Mr Foo Bar
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M38 11.47V5.177A3.174 3.174 0 0 0 34.836 2H5.164A3.174 3.174 0 0 0 2 5.176v6.295h36Z"
                fill="#23A4DE"
              />
              <path
                d="M2 11.4v23.235a3.174 3.174 0 0 0 3.164 3.177h29.672A3.174 3.174 0 0 0 38 34.635V11.4H2Z"
                fill="#7BC9EB"
              />
              <circle
                cx="15.5"
                cy="29"
                fill="#EAF5FC"
                r="3"
              />
              <path
                d="M17.986 16.248a13.174 13.174 0 0 0-6.01.215.66.66 0 0 0-.476.638v1.384a.64.64 0 0 0 .848.598 10.445 10.445 0 0 1 13.07 13.069.64.64 0 0 0 .597.848h1.384a.658.658 0 0 0 .637-.476c.535-1.96.608-4.017.215-6.01a13.074 13.074 0 0 0-10.265-10.265Z"
                fill="#0061A8"
              />
              <path
                clip-rule="evenodd"
                d="M15.423 33a3.922 3.922 0 1 1 0-7.845 3.922 3.922 0 0 1 0 7.845Zm0-5.23a1.308 1.308 0 1 0 0 2.615 1.308 1.308 0 0 0 0-2.616Z"
                fill="#0061A8"
                fill-rule="evenodd"
              />
              <path
                d="M11.873 21.36A8.488 8.488 0 0 1 23.14 32.626a.66.66 0 0 1-.6.374h-1.48a.654.654 0 0 1-.547-1.004 5.857 5.857 0 0 0-8.008-8.008.655.655 0 0 1-1.004-.547v-1.48a.661.661 0 0 1 .373-.6Z"
                fill="#0061A8"
              />
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Active Status
            </h2>
            <div>
              <span
                class="el-intent-success el-status-indicator"
              />
               
              Active
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#phoneInfographic_svg__a)"
              >
                <path
                  d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a391.66 391.66 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.536.536 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a.486.486 0 0 1 .056-.066c.145-.14.288-.28.43-.423.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115-.375-.38-.753-.757-1.13-1.135-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.216 19.216 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846Z"
                  fill="#23A4DE"
                />
                <path
                  d="M10.025 3.774a1.265 1.265 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056Z"
                  fill="#7BC9EB"
                />
              </g>
              <defs>
                <clippath
                  id="phoneInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                    transform="matrix(-1 0 0 1 20 0)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Mobile Phone
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              242423424
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#phoneInfographic_svg__a)"
              >
                <path
                  d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a391.66 391.66 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.536.536 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a.486.486 0 0 1 .056-.066c.145-.14.288-.28.43-.423.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115-.375-.38-.753-.757-1.13-1.135-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.216 19.216 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846Z"
                  fill="#23A4DE"
                />
                <path
                  d="M10.025 3.774a1.265 1.265 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056Z"
                  fill="#7BC9EB"
                />
              </g>
              <defs>
                <clippath
                  id="phoneInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                    transform="matrix(-1 0 0 1 20 0)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Home Phone
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              234234234
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#phoneInfographic_svg__a)"
              >
                <path
                  d="M15.75 19.147c.413-.464.875-.885 1.312-1.328.647-.656.652-1.451.009-2.102a391.66 391.66 0 0 0-2.311-2.32c-.633-.63-1.424-.628-2.054 0-.482.479-.964.957-1.435 1.446a.536.536 0 0 1-.095.08l-.33.331c-.091.059-.183.058-.302-.007-.311-.17-.641-.306-.94-.495-1.394-.879-2.563-2.011-3.597-3.288-.514-.635-.971-1.31-1.287-2.073-.053-.127-.054-.218.016-.315l.33-.33a.486.486 0 0 1 .056-.066c.145-.14.288-.28.43-.423.334-.33.663-.666.994-1 .658-.664.657-1.446-.004-2.115-.375-.38-.753-.757-1.13-1.135-.387-.39-.772-.782-1.163-1.168-.634-.625-1.426-.626-2.059-.001-.482.477-.95.97-1.44 1.44-.457.436-.69.966-.736 1.588-.076 1.01.17 1.963.515 2.894.712 1.925 1.795 3.63 3.105 5.197a19.216 19.216 0 0 0 6.37 5.004c1.114.544 2.271.963 3.526 1.032.863.048 1.618-.17 2.22-.846Z"
                  fill="#23A4DE"
                />
                <path
                  d="M10.025 3.774a1.265 1.265 0 0 0-.536.108c-.417.195-.613.686-.501 1.177.098.432.478.73.956.736 1.117.014 2.105.369 2.926 1.137.902.845 1.324 1.903 1.368 3.135.007.22.09.469.218.644.267.366.743.458 1.18.29.386-.147.613-.494.61-.954-.013-1.717-.635-3.183-1.836-4.446-1.206-1.166-2.67-1.803-4.385-1.827Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M16.855 2.72c2.072 2.15 3.062 4.456 3.143 7.15.018.619-.356 1.028-.95 1.06-.625.033-1.05-.355-1.065-.987-.033-1.326-.332-2.586-.988-3.74-1.492-2.626-3.769-3.995-6.765-4.167-.332-.02-.644-.054-.878-.321-.3-.342-.325-.736-.164-1.136.162-.404.492-.586.92-.578 1.95.033 3.75.578 5.374 1.662.561.374 1.073.823 1.373 1.056Z"
                  fill="#7BC9EB"
                />
              </g>
              <defs>
                <clippath
                  id="phoneInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                    transform="matrix(-1 0 0 1 20 0)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Work Phone
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              2342342344
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.466 11.791a.794.794 0 0 0 .533.209.795.795 0 0 0 .534-.209L20 4c0-.5-.636-1-.969-1H.97C.636 3 0 3.5 0 4l9.466 7.791Z"
                fill="#23A4DE"
              />
              <path
                d="M11.394 10.792a2.057 2.057 0 0 1-1.393.552 2.057 2.057 0 0 1-1.393-.552L1 3c-.5 0-1 .5-1 1v10.871c0 .607.226 1.188.628 1.616.402.429.946.67 1.515.67h15.714c.569 0 1.114-.241 1.515-.67.402-.428.628-1.01.628-1.615V4c0-.5-.5-1-1-1l-7.606 7.792Z"
                fill="#7BC9EB"
              />
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Email
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              foo@bar.com
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#houseInfographic_svg__a)"
              >
                <path
                  d="M2 20h16V7.882L10 2 2 7.882V20Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M1.221 10 10 2.657 18.779 10 20 8.365 10 0 0 8.365 1.221 10Z"
                  fill="#23A4DE"
                />
                <path
                  d="M6 12h8v8H6v-8Z"
                  fill="#EAF5FC"
                />
                <path
                  d="M8 14h4v6H8v-6Z"
                  fill="#23A4DE"
                />
              </g>
              <defs>
                <clippath
                  id="houseInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Primary Address
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              Bar Foo Foo Bar Foo Bar Foo
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#houseInfographic_svg__a)"
              >
                <path
                  d="M2 20h16V7.882L10 2 2 7.882V20Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M1.221 10 10 2.657 18.779 10 20 8.365 10 0 0 8.365 1.221 10Z"
                  fill="#23A4DE"
                />
                <path
                  d="M6 12h8v8H6v-8Z"
                  fill="#EAF5FC"
                />
                <path
                  d="M8 14h4v6H8v-6Z"
                  fill="#23A4DE"
                />
              </g>
              <defs>
                <clippath
                  id="houseInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Secondary Address
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              Bar Foo Foo Bar Foo Bar Foo
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#houseInfographic_svg__a)"
              >
                <path
                  d="M2 20h16V7.882L10 2 2 7.882V20Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M1.221 10 10 2.657 18.779 10 20 8.365 10 0 0 8.365 1.221 10Z"
                  fill="#23A4DE"
                />
                <path
                  d="M6 12h8v8H6v-8Z"
                  fill="#EAF5FC"
                />
                <path
                  d="M8 14h4v6H8v-6Z"
                  fill="#23A4DE"
                />
              </g>
              <defs>
                <clippath
                  id="houseInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Work Address
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              Bar Foo Foo Bar Foo Bar Foo
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#vendorInfographic_svg__a)"
              >
                <path
                  d="M2.552 16.672A9.962 9.962 0 0 1 0 10C0 4.477 4.477 0 10 0s10 4.477 10 10a9.962 9.962 0 0 1-2.552 6.672H2.552Z"
                  fill="#23A4DE"
                />
                <path
                  d="M5.893 3.897c.279-1.085 1.322-1.202 1.322-1.202S7.441.768 10 .768s2.785 1.927 2.785 1.927 1.043.117 1.322 1.202c.279 1.085-.442 2.628-.442 2.628L10 8.018 6.335 6.525s-.72-1.543-.442-2.628Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M14.107 3.897c.279 1.085-.442 2.628-.442 2.628l-1.768.72-.45-.546V4.304c1.097-.228 1.338-.984 1.338-1.609 0 0 1.043.118 1.322 1.202Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M7.302 7.175s-.348-.847-.967-.65c-.62.196.015 2.03 1.224 2.145l-.257-1.495ZM12.698 7.175s.348-.847.967-.65c.62.196-.015 2.03-1.224 2.145l.257-1.495Z"
                  fill="#fff"
                />
                <path
                  d="M2.552 16.672c.38-1.108.805-2.141 1.159-2.453.86-.759 4.582-1.372 4.582-1.372L10 14.167l1.707-1.32s3.723.613 4.582 1.372c.353.312.78 1.345 1.159 2.453A9.974 9.974 0 0 1 10 20a9.974 9.974 0 0 1-7.448-3.328Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M5.913 18.633a9.996 9.996 0 0 0 8.735-5.128c.707.207 1.345.452 1.641.714.354.312.78 1.345 1.159 2.453A9.974 9.974 0 0 1 10 20c-1.881 0-3.64-.52-5.144-1.423.348.036.7.056 1.057.056Z"
                  fill="#7BC9EB"
                />
                <path
                  d="m9.42 15.948.58-.88.58.88.504 3.994a10.107 10.107 0 0 1-2.168 0l.504-3.994Z"
                  fill="#23A4DE"
                />
                <path
                  d="M9.39 16.083h1.22c.09 0 .167-.06.19-.146l.49-1.885H8.71l.49 1.885c.023.086.1.146.19.146Z"
                  fill="#23A4DE"
                />
                <path
                  d="m10.018 15.937.49-1.885h.781l-.49 1.885a.195.195 0 0 1-.188.146h-.782c.09 0 .167-.06.19-.146Z"
                  fill="#23A4DE"
                />
                <path
                  d="M11.707 8.47v4.377c0 .665-.764 1.205-1.707 1.205-.943 0-1.707-.54-1.707-1.205V8.469h3.414Z"
                  fill="#EAF5FC"
                />
                <path
                  d="M11.707 12.305 10 14.052s.664 1.2 1.094 1.2c.43 0 1.172-2.304 1.172-2.304l-.56-.643ZM8.293 12.305 10 14.052s-.664 1.2-1.094 1.2c-.43 0-1.172-2.304-1.172-2.304l.56-.643Z"
                  fill="#fff"
                />
                <path
                  d="m4.407 17.04.45 1.537a10.014 10.014 0 0 1-.833-.558v-.923c0-.226.32-.272.383-.055ZM15.976 17.096v.923c-.268.2-.546.386-.833.558l.45-1.536c.063-.217.383-.171.383.055Z"
                  fill="#23A4DE"
                />
                <path
                  d="M7.215 6.107c.171-.417.183-1.693.637-1.875.453-.182.833.312 2.148.312 1.315 0 1.695-.494 2.149-.312.453.182.465 1.458.636 1.875.16.388.36.467.386.476.002.06.003.122.003.183 0 2.338-1.421 5.079-3.174 5.079S6.826 9.104 6.826 6.766l.003-.183c.027-.009.227-.088.386-.476Z"
                  fill="#fff"
                />
              </g>
              <defs>
                <clippath
                  id="vendorInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                    transform="matrix(1 0 0 -1 0 20)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Negotiators
            </h2>
            <mock-styled.div />
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#flatInfographic_svg__a)"
              >
                <path
                  d="M20 20h-9V4h9v16Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M13 2h-1v18h1V2ZM1.28 0v1.787H0V20h12V0H1.28Z"
                  fill="#23A4DE"
                />
                <path
                  d="M5.149 4.505H3.617V6.38H5.15V4.505ZM8.962 4.505H7.43V6.38h1.532V4.505ZM3.617 8.255H5.15v1.875H3.617V8.255ZM8.962 8.255H7.43v1.875h1.532V8.255ZM3.617 12.006H5.15v1.875H3.617v-1.875ZM8.962 12.006H7.43v1.875h1.532v-1.875ZM3.617 15.756H5.15v1.875H3.617v-1.875ZM8.962 15.756H7.43v1.875h1.532v-1.875Z"
                  fill="#EAF5FC"
                />
                <path
                  d="M16.281 8.255h-1.532v1.875h1.532V8.255ZM16.281 12.006h-1.532v1.875h1.532v-1.875Z"
                  fill="#23A4DE"
                />
              </g>
              <defs>
                <clippath
                  id="flatInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Offices
            </h2>
            <mock-styled.div>
              London Estate Agent
            </mock-styled.div>
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#webInfographic_svg__a)"
              >
                <path
                  d="M10.809 7.535v11.3l3.166-2.907L16.273 20l1.67-.796-2.213-3.917h4.272l-9.193-7.753Z"
                  fill="#23A4DE"
                />
                <path
                  d="M7.341 16.127a20.1 20.1 0 0 1-.934-4.185c.795.045 1.614.072 2.445.072h.035V10.6h-.035c-.921 0-1.787-.03-2.596-.079a31.37 31.37 0 0 1-.093-2.386c0-.853.031-1.642.085-2.387a42.751 42.751 0 0 1 5.193 0c0 .256 1.36 1.085 1.595 1.282-.013-.39-.037-.77-.064-1.15a25.46 25.46 0 0 1 4.594.863c.089.458.135.923.137 1.388 0 .465-.044.928-.132 1.386-.067.353-.464.946-.644 1.153a22.858 22.858 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.189 1.653-.504 3.997-.172 1.277-.443 5.297-.443 5.895-.577 0-1.23-.16-2.083-.16ZM5.598.584a23.835 23.835 0 0 0-.748 3.868 30.2 30.2 0 0 0-4.208.685 8.149 8.149 0 0 1 1.965-2.742A8.992 8.992 0 0 1 5.588.584h.01Zm0 15.107a8.996 8.996 0 0 1-2.993-1.808 8.152 8.152 0 0 1-1.973-2.748 30.16 30.16 0 0 0 4.208.688 23.86 23.86 0 0 0 .746 3.866l.012.002Zm-.887-5.3a25.428 25.428 0 0 1-4.572-.864 7.031 7.031 0 0 1 0-2.78c1.489-.426 3.02-.715 4.572-.864-.05.73-.079 1.483-.079 2.246 0 .764.03 1.535.079 2.263ZM8.853 4.26c-.84 0-1.658.025-2.445.07.161-1.426.477-2.833.94-4.201a9.017 9.017 0 0 1 3.023 0c.46 1.37.77 2.777.926 4.203a40.993 40.993 0 0 0-2.444-.072Zm4.007.19a23.878 23.878 0 0 0-.746-3.868 8.993 8.993 0 0 1 2.989 1.81 8.148 8.148 0 0 1 1.97 2.746 30.19 30.19 0 0 0-4.213-.687Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M7.343 16.127a20.099 20.099 0 0 1-.934-4.185c.794.045 1.613.072 2.445.072h.034V10.6h-.034c-.922 0-1.788-.03-2.597-.079a31.37 31.37 0 0 1-.093-2.385c0-.854.032-1.643.086-2.388a42.76 42.76 0 0 1 5.193 0c0 .256 1.36 1.085 1.594 1.282-.012-.39-.037-.77-.064-1.15 1.56.147 3.098.436 4.595.863.088.458.134.923.136 1.388 0 .465-.044.928-.131 1.386-.068.353-.465.946-.645 1.153a22.858 22.858 0 0 1-2.886-1.685c-1.259-.851-2.373-1.76-3.67-2.591-.182 1.468-.188 1.653-.504 3.997-.171 1.277-.443 5.297-.443 5.895-.576 0-1.23-.16-2.082-.16Z"
                  fill="#23A4DE"
                />
              </g>
              <defs>
                <clippath
                  id="webInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                    transform="matrix(-1 0 0 1 20 0)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Source
            </h2>
            <mock-styled.div />
          </div>
        </div>
      </div>
      <div
        class="el-fade-in el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#shieldInfographic_svg__a)"
                clip-rule="evenodd"
                fill-rule="evenodd"
              >
                <path
                  d="M17.609 3.516C14.918 3.516 13.548 0 9.976 0 6.453 0 5.083 3.516 2.39 3.516c-.195 0-.391.204-.391.458 0 7.95 1.077 11.873 7.78 15.95.147.102.293.102.391 0 6.753-4.077 7.829-8 7.829-15.95 0-.254-.195-.458-.391-.458Z"
                  fill="#23A4DE"
                />
                <path
                  d="M17.849 3.907C16.5 8 10.649 14.191 5.399 16.5 6.5 18 9 19.5 9.822 19.926c.15.099.301.099.402 0 6.923-3.98 7.977-7.81 7.977-15.571 0-.249-.29-.636-.351-.448Z"
                  fill="#7BC9EB"
                />
                <path
                  d="m13.453 6.177-4.796 4.825-1.1-1.126c-1.415-1.367-3.459.723-2.123 2.17l2.202 2.171c.55.644 1.572.644 2.122 0l5.817-5.87c1.336-1.446-.786-3.617-2.122-2.17Z"
                  fill="#EAF5FC"
                />
              </g>
              <defs>
                <clippath
                  id="shieldInfographic_svg__a"
                >
                  <path
                    d="M0 0h20v20H0z"
                    fill="#fff"
                    transform="matrix(-1 0 0 1 20 0)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <h2
              class="el-has-no-margin el-subtitle"
            >
              Marketing Preferences
            </h2>
            <mock-styled.div>
              Has Marketing Consent
            </mock-styled.div>
            <mock-styled.div>
              Prefers Letter Communications
            </mock-styled.div>
            <mock-styled.div>
              Prefers Email Communications
            </mock-styled.div>
            <mock-styled.div>
              Prefers Phone Communications
            </mock-styled.div>
            <mock-styled.div>
              Prefers SMS Communications
            </mock-styled.div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ContactsEditView should match a snapshot with no data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
